| Summary: | ASTERISK-26714: Phone default have not ringing on ARM | ||
| Reporter: | Igor Goncharovsky (igorg) | Labels: | |
| Date Opened: | 2017-01-11 15:07:18.000-0600 | Date Closed: | 2017-02-16 11:33:25.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_unistim |
| Versions: | 13.13.1 14.2.1 GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | exten => 123,1,Dial(USTM/123@123/r00,10) -This rings the default ring
(number 1 in nortel land) and at the lowest volume, not off. If I do this: exten => 123,1,Dial(USTM/123@123,10) It only blinks on the top LED.. no ringer. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-01-11 15:07:18.567-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2017-02-16 11:33:25.699-0600 Change 4964 merged by zuul: chan_unistim: fix char type to have consistent behavior on ARM [https://gerrit.asterisk.org/4964|https://gerrit.asterisk.org/4964] By: Friendly Automation (friendly-automation) 2017-02-16 11:33:29.046-0600 Change 4965 merged by zuul: chan_unistim: fix char type to have consistent behavior on ARM [https://gerrit.asterisk.org/4965|https://gerrit.asterisk.org/4965] By: Friendly Automation (friendly-automation) 2017-02-16 11:33:32.457-0600 Change 4966 merged by zuul: chan_unistim: fix char type to have consistent behavior on ARM [https://gerrit.asterisk.org/4966|https://gerrit.asterisk.org/4966] | ||